--- a/contracts_for_concurrency-20-bibliography.bib
+++ b/contracts_for_concurrency-20-bibliography.bib
@@ -1,4 +1,4 @@
-@INPROCEEDINGS{FITPUB11510,
+@INPROCEEDINGS{contracts,
    author = "J. Ricardo Dias and Carla Ferreira and Jan Fiedor and Joao Lourenco and Ale\v{s} Smr\v{c}ka and J. Diogo Sousa and Tom\'{a}\v{s} Vojnar",
    title = "Verifying Concurrent Programs Using Contracts",
    pages = "196--206",
