--- a/contracts_for_concurrency-20-bibliography.bib
+++ b/contracts_for_concurrency-20-bibliography.bib
@@ -167,6 +167,17 @@ series = {POPL '04}
     pages = {69-332}
 }
 
+@phdthesis{letko,
+    author = "Zden\v{e}k Letko",
+    type = "Ph.D. thesis",
+    title = "Analysis and Testing of Concurrent Programs",
+    school = "Brno University of Technology, Faculty of Information Technology",
+    year = 2012,
+    location = "Brno, CZ",
+    language = "english",
+    url = "https://www.fit.vut.cz/study/phd-thesis/364/"
+}
+
 %    @BOOK{Pravidla,
 %      author =       "Zdeněk Hlavsa and others",
 %      title =        "Pravidla českého pravopisu",
